--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>任務三：多分支管理與 git reset 還原</title>
+    <title>"修改 title"</title>
     <link rel="stylesheet" href="all.css">
 </head>
 <body>
     <h1 class="fs-1">這是藍色H1</h1>
+    <p>任務三：多分支管理與 git reset 還原</p>
     
 </body>
 </html>
