--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="all.css">
 </head>
 <body>
-    <h1 class="fs-1">這是藍色H1</h1>
+    <h1 class="fs-1">修改標題~</h1>
     <p>任務三：多分支管理與 git reset 還原</p>
     
 </body>
